[package]
name = "js-canvas-rendering-context-2d"
version = "0.2.0"
edition = "2021"
description = "A library meant to be a zero dependency wrapper for the CanvasRenderingContext2D web api for use in WASM rust applications."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/SethRAH/js-canvas-rendering-context-2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
